# TalkFlow

./: main.py  pyproject.toml  testing.py
app/core/: config.py
app/models/: auth_model.py  chat_models.py
app/routers/: auth_api.py  chat_api.py
app/schemas/: auth_schemas.py  chat_schemas.py
app/services/: chat_service.py  database_service.py  db.py  dependencies.py  redis.py  user_service.py
app/utils/: utils.py
migrations/: env.py
migrations/versions/: 0741e5d7a703_time_defaulted_to_server_time.py  10652a248349_update_message_model_and_remove_get_all_.py  1b0c8bfeaef3_init.py  2b8af035289f_update_message_mode.py  30125a9c7608_recreate_messages_table_with_new_column_.py  5dcecf81e130_.py  b33dd6f62b60_uuid_is_defaulted_to_server.py  bb9e67fc10c4_recreate_messages_table_with_new_column_.py
